--- a/app/views/restaurants/_form.html.haml
+++ b/app/views/restaurants/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for(@restaurant) do |f|
+= form_for(@restaurant, :html => { multipart: true }) do |f|
   - if @restaurant.errors.any?
     #error_explanation
       %h2
@@ -23,5 +23,9 @@
     = f.label :website
     %br/
     = f.text_field :website, class: "form-control"
+  .form-group
+    = f.label :image
+    %br/
+    = f.file_field :image, class: "form-control"
   .actions
     = f.submit class: "btn btn-primary"
