--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -20,7 +20,8 @@
         %td= restaurant.name
         %td= restaurant.address
         %td= restaurant.phone
-        %td= restaurant.website
+        %td
+          =link_to restaurant.website, restaurant.website
         %td= link_to 'Show', restaurant, class: "btn btn-link"
         %td= link_to 'Edit', edit_restaurant_path(restaurant), class: "btn btn-link"
         %td= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link"
