--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -4,9 +4,19 @@
       %span.icon-bar
       %span.icon-bar
       %span.icon-bar
-    %a.navbar-brand{:href => "#"} Relp
+    = link_to "Relp", root_path, class: "navbar-brand"
     .navbar-collapse.collapse.navbar-responsive-collapse
       %ul.nav.navbar-nav
-        %li= link_to "Link1", "/path1"
-        %li= link_to "Link2", "/path2"
-        %li= link_to "Link3", "/path3"
+        %li= link_to "About", pages_about_path
+        %li= link_to "Contact", pages_contact_path
+
+      %ul.nav.navbar-nav.navbar-right
+        -if !user_signed_in?
+          %li
+            = link_to "Sign Up", new_user_registration_path
+          %li
+            = link_to "Log In", new_user_session_path
+
+        -else
+          %li
+            = link_to "Sign Out", destroy_user_session_path, method: :delete
