--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -34,7 +34,7 @@
     <div class="col-lg-offset-2 col-lg-10">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                reviews_path, :class => 'btn btn-default' %>
+                '#', :class => 'btn btn-default' %>
     </div>
   </div>
 
