--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -13,6 +13,9 @@
 %p
   %strong Website:
   = @restaurant.website
+
+= link_to 'Write Review', new_restaurant_review_path(@restaurant), class: "btn btn-primary"
+
 = link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link"
 |
 \#{link_to 'Back', restaurants_path, class: "btn btn-link"}
