added params to new and edit devise

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -19,4 +19,6 @@
 
         -else
           %li
+            = link_to "Edit Account", edit_user_registration_path
+          %li
             = link_to "Sign Out", destroy_user_session_path, method: :delete
