--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -25,10 +25,24 @@
     - if @reviews.blank?
       %h3 No reviews yet. Maybe be the first to write one?
     -else
-      - @reviews.each do |review|
-        %div{class: "star-rating", "data-score" => review.rating}
+      %table.table
+        %thead
+          %tr
+            %th.col-md-3
 
-        %p= h(review.comment).gsub(/\n/, '<br/>').html_safe
+            %th.col-md-9
+        %tbody
+          - @reviews.each do |review|
+            %tr
+              %td
+                %h4
+                  = "#{review.user.first_name.capitalize} #{review.user.last_name.capitalize[0]}."
+                %p= review.created_at.strftime("%-m/%-d/%y")
+              %td
+                %div{class: "star-rating", "data-score" => review.rating}
+
+                %p= h(review.comment).gsub(/\n/, '<br/>').html_safe
+
 
 = link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link"
 |
