added admin auth and user permission

--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -13,19 +13,21 @@
       %th Address
       %th Phone
       %th Website
-      %th{:colspan => "3"}
+      - if user_signed_in? && current_user.admin?
+        %th{:colspan => "2"}
   %tbody
     - @restaurants.each do |restaurant|
       %tr
-        %td= restaurant.name
+        %td= link_to restaurant.name, restaurant
         %td= restaurant.address
         %td= restaurant.phone
-        %td
-          =link_to restaurant.website, restaurant.website
-        %td= link_to 'Show', restaurant, class: "btn btn-link"
-        %td= link_to 'Edit', edit_restaurant_path(restaurant), class: "btn btn-link"
-        %td= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link"
+        %td= link_to restaurant.website, restaurant.website
+        - if user_signed_in? && current_user.admin?
+          %td= link_to 'Edit', edit_restaurant_path(restaurant), class: "btn btn-success"
+          %td= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger"
 %br/
-= link_to 'New Restaurant', new_restaurant_path
+
+- if user_signed_in? && current_user.admin?
+  = link_to 'New Restaurant', new_restaurant_path, class: "btn btn-info"
 
 = image_tag "https://s3-us-west-2.amazonaws.com/reslp/hong-kong-skyline-pen2.jpg", class: "img-responsive"
