--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -42,6 +42,10 @@
                 %div{class: "star-rating", "data-score" => review.rating}
 
                 %p= h(review.comment).gsub(/\n/, '<br/>').html_safe
+                - if user_signed_in?
+                  - if (review.user == current_user) || (current_user.admin?)
+                    = link_to "Edit", edit_restaurant_review_path(@restaurant, review), class: "btn-success btn"
+                    = link_to "Delete", restaurant_review_path(@restaurant, review), method: :delete, class: "btn-danger btn"
 
 
 = link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link"
