--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,10 @@
       %ul.nav.navbar-nav
         %li= link_to "About", pages_about_path
         %li= link_to "Contact", pages_contact_path
-
+      = form_tag search_restaurants_path, method: :get, class: "navbar-form navbar-left" do
+        %p
+          = text_field_tag :search, params[:search], class: "form-control"
+          = submit_tag "Search", name: nil, class: "btn btn-default"
       %ul.nav.navbar-nav.navbar-right
         -if !user_signed_in?
           %li
